--- a/Estructuras/Estructuras/Estructuras.csproj
+++ b/Estructuras/Estructuras/Estructuras.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1A2AD4A0-C18C-407D-9C07-D740476817D3}</ProjectGuid>
+    <ProjectGuid>{E28E4F0C-9166-41FC-911B-0D8AE91EDC40}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EstructurasGenericas</RootNamespace>
-    <AssemblyName>EstructurasGenericas</AssemblyName>
+    <RootNamespace>Estructuras</RootNamespace>
+    <AssemblyName>Estructuras</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -47,6 +47,5 @@
     <Compile Include="Node\Nodo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
