--- a/Lab1_RicardoChian_PabloGarcia/Lab1_RicardoChian_PabloGarcia.csproj
+++ b/Lab1_RicardoChian_PabloGarcia/Lab1_RicardoChian_PabloGarcia.csproj
@@ -166,6 +166,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Empleado\Index.cshtml" />
+    <Content Include="Views\Empleado\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
