Creacion en el controlador del ActionResult "Parqueo" y su vista

--- a/Lab1_RicardoChian_PabloGarcia/Lab1_RicardoChian_PabloGarcia.csproj
+++ b/Lab1_RicardoChian_PabloGarcia/Lab1_RicardoChian_PabloGarcia.csproj
@@ -167,6 +167,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Empleado\Index.cshtml" />
     <Content Include="Views\Empleado\Create.cshtml" />
+    <Content Include="Views\Empleado\Parqueo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
