--- a/Lab1_RicardoChian_PabloGarcia/Lab1_RicardoChian_PabloGarcia.csproj
+++ b/Lab1_RicardoChian_PabloGarcia/Lab1_RicardoChian_PabloGarcia.csproj
@@ -168,6 +168,7 @@
     <Content Include="Views\Empleado\Index.cshtml" />
     <Content Include="Views\Empleado\Create.cshtml" />
     <Content Include="Views\Empleado\Parqueo.cshtml" />
+    <Content Include="Views\Empleado\RegistrarEntrada.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
