--- a/Lab1_RicardoChian_PabloGarcia/Lab1_RicardoChian_PabloGarcia.csproj
+++ b/Lab1_RicardoChian_PabloGarcia/Lab1_RicardoChian_PabloGarcia.csproj
@@ -169,6 +169,7 @@
     <Content Include="Views\Empleado\Create.cshtml" />
     <Content Include="Views\Empleado\Parqueo.cshtml" />
     <Content Include="Views\Empleado\RegistrarEntrada.cshtml" />
+    <Content Include="Views\Empleado\CrearPorArchivo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
