Busquedas arregladas y archivo de texto en el repo, para ser usardo

--- a/Lab1_RicardoChian_PabloGarcia/Lab1_RicardoChian_PabloGarcia.csproj
+++ b/Lab1_RicardoChian_PabloGarcia/Lab1_RicardoChian_PabloGarcia.csproj
@@ -170,6 +170,8 @@
     <Content Include="Views\Empleado\Parqueo.cshtml" />
     <Content Include="Views\Empleado\RegistrarEntrada.cshtml" />
     <Content Include="Views\Empleado\CrearPorArchivo.cshtml" />
+    <Content Include="Views\Empleado\Busquedas.cshtml" />
+    <Content Include="Views\Empleado\Busqueda_Nombre.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
